# mrrocpp

src/application/: CMakeLists.txt
src/application/block_move/: CMakeLists.txt  ClgPlanner.cc  ClgPlanner.h  ecp_g_block_reaching.cc  ecp_g_block_reaching.h  ecp_g_position_board.cc  ecp_g_position_board.h  ecp_mp_g_block_reaching.h  ecp_mp_g_position_board.h  ecp_t_block_move.cc  ecp_t_block_move.h  mp_t_block_move.cc  mp_t_block_move.h  mp_t_block_planner.cc  mp_t_block_planner.h
src/application/block_move/ini/: block_move.ini  block_move_test.ini  block_move_test_srv.ini
src/application/block_pickup/: CMakeLists.txt  block_pickup.ini  ecp_t_block_pickup.cc  ecp_t_block_pickup.h  mp_t_block_pickup.cc  mp_t_block_pickup.h
src/application/block_putdown/: CMakeLists.txt  block_putdown.ini  ecp_t_block_putdown.cc  ecp_t_block_putdown.h  mp_t_block_putdown.cc  mp_t_block_putdown.h
src/application/clg_planner/: CMakeLists.txt  action_manager.cc  action_manager.h  clg_planner.ini  clg_planner_test.ini  clg_proxy.cc  clg_proxy.h  ecp_t_clg_planner.cc  ecp_t_clg_planner.h  mp_t_clg_planner.cc  mp_t_clg_planner.h
src/application/clg_planner/generators/: ecp_g_reach_already_localized_block.cc  ecp_g_reach_already_localized_block.h  ecp_mp_g_reach_already_localized_block.h
src/application/clg_planner/trjs/: build.trj  build_double.trj  build_double_ns.trj  build_single_ns.trj  move_before_pickup.trj  pos_build_start_track.trj  pos_search_area_start_track_1.trj  pos_search_area_start_track_2.trj  pos_search_area_start_track_3.trj  pos_search_area_start_track_4.trj  putdown_ew_doutr.trj  putdown_ew_rotate.trj  putdown_ew_rotate_double.trj  putdown_ew_sintr.trj  putdown_ns_rotate.trj  putdown_ns_sintr.trj  putdown_ns_tr.trj  up_after_pickup.trj
src/application/visual_servoing/: ib_eih_visual_servo.cc
src/sensor/discode/: discode_sensor.cc
